--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
 .jumbotron {
-    height: 200px;
+    width:100%;
+    background-image: url("../images/general/pexels-photo-1598213.jpeg");  
+    color: white;
+    background-position: center;
+    background-size: 100%;
+    font-weight: bold;
 }
+.mjkfooter {
+    text-align: center;
+    color: white;
+    background-color: grey;
+    margin: 20px;
+}
+
